kustomize-units/kyverno-policies/generic/clone-os-images-secret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-secrets
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    policies.kyverno.io/title: Sync Secrets
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Secret
    policies.kyverno.io/description: >-
      Copy the os-images-tls secret to metal3-system namespace, in order to pass its contents to Ironic Python Agent
spec:
  rules:
  - name: sync-os-images-secret
    match:
      resources:
        kinds:
        - Namespace
    generate:
      apiVersion: v1
      kind: Secret
      name: os-image-server-tls
      namespace: metal3-system
      synchronize: true
      clone:
        namespace: os-images
        name: os-image-server-tls
