kustomize-units/kyverno-policies/generic/tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-and-main-tag
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    policies.kyverno.io/title: Disallow Latest and Main Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The ':latest' and ':main' tags are mutable and can lead to unexpected errors if the
      image changes. A best practice is to use an immutable tag that maps to
      a specific version of an application Pod. This policy validates that the image
      specifies a tag and that it is not called `latest` or 'main'.
spec:
  validationFailureAction: Audit
  background: false # validation is moved from Kyverno policy engine to kube-api server
  webhookConfiguration:
    matchConditions:
    - name: 'is-create-or-update'
      expression: 'request.operation in ["CREATE", "UPDATE"]'
  rules:
  - name: require-image-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      cel:
        expressions:
          - expression: >-
              (
                  object.spec.containers +
                  (has(object.spec.initContainers) ? object.spec.initContainers : []) +
                  (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
              ).all(container,
                  container.image.contains(':')
              )
            message: "An image tag is required"
  - name: validate-image-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      cel:
        expressions:
          - expression: >-
              (
                  object.spec.containers +
                  (has(object.spec.initContainers) ? object.spec.initContainers : []) +
                  (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
              ).all(container,
                  !(container.image.endsWith(':latest')) &&
                  !(container.image.endsWith(':main'))
              )
            message: "Using a mutable image tag e.g. 'latest' or 'main' is not allowed"
